src/gen/ViewParser.java
// Generated from src/View.g4 by ANTLR 4.8
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ViewParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
			T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17,
			T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24,
			T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31,
			T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38,
			T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45,
			T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52,
			T__52=53, T__53=54, T__54=55, KEYWORD=56, RETURN=57, COMMAND=58, COMPARISON=59,
			OPERATOR=60, CONSTANTS=61, VALUE=62, NAME=63, WHITESPACE=64, ANY=65;
	public static final int
			RULE_root = 0, RULE_scope = 1, RULE_query = 2, RULE_changegraph = 3, RULE_pipeline = 4,
			RULE_replacements = 5, RULE_iteration = 6, RULE_validVal = 7, RULE_iterationCase = 8,
			RULE_size = 9, RULE_range = 10, RULE_pipeconditions = 11, RULE_pipeexpr = 12,
			RULE_function = 13, RULE_viewuse = 14, RULE_usedviews = 15, RULE_viewatom = 16,
			RULE_returnstmt = 17, RULE_retval = 18, RULE_expr = 19, RULE_variable = 20,
			RULE_type = 21, RULE_nodeName = 22, RULE_relation = 23, RULE_relationValue = 24,
			RULE_relationLength = 25, RULE_path = 26, RULE_conditions = 27, RULE_boolexpr = 28,
			RULE_attribute = 29, RULE_val = 30, RULE_indexing = 31, RULE_setattr = 32,
			RULE_arithmetic = 33, RULE_insertion = 34, RULE_insertrelation = 35, RULE_insertionVar = 36,
			RULE_insertAttributes = 37, RULE_as = 38, RULE_exists = 39;
	private static String[] makeRuleNames() {
		return new String[] {
				"root", "scope", "query", "changegraph", "pipeline", "replacements",
				"iteration", "validVal", "iterationCase", "size", "range", "pipeconditions",
				"pipeexpr", "function", "viewuse", "usedviews", "viewatom", "returnstmt",
				"retval", "expr", "variable", "type", "nodeName", "relation", "relationValue",
				"relationLength", "path", "conditions", "boolexpr", "attribute", "val",
				"indexing", "setattr", "arithmetic", "insertion", "insertrelation", "insertionVar",
				"insertAttributes", "as", "exists"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "'CG'", "'LOCAL'", "'GLOBAL'", "'SET'", "'DELETE'", "'REMOVE'",
				"'CREATE'", "'WITH'", "','", "'['", "'IN'", "'('", "')'", "'|'", "']'",
				"'NULL'", "'CASE WHEN'", "'THEN'", "'ELSE'", "'END'", "'SIZE'", "'size'",
				"'RANGE'", "'range'", "'WHERE'", "'='", "'COLLECT('", "'UNWIND'", "'COUNT('",
				"'COUNT(*)'", "'MAX('", "'WITH VIEWS'", "'-['", "']-'", "']->'", "'<-['",
				"'NODES('", "':'", "'*'", "'..'", "'*..'", "'AND'", "'OR'", "'not'",
				"'NOT'", "'.'", "'+'", "'-'", "'/'", "'{'", "'}'", "'AS'", "'as'", "'EXISTS'",
				"'exists'", null, "'RETURN'", "'CREATE VIEW AS'", null, null, null, null,
				null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, "KEYWORD", "RETURN",
				"COMMAND", "COMPARISON", "OPERATOR", "CONSTANTS", "VALUE", "NAME", "WHITESPACE",
				"ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "View.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ViewParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode COMMAND() { return getToken(ViewParser.COMMAND, 0); }
		public TerminalNode NAME() { return getToken(ViewParser.NAME, 0); }
		public ViewuseContext viewuse() {
			return getRuleContext(ViewuseContext.class,0);
		}
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public ChangegraphContext changegraph() {
			return getRuleContext(ChangegraphContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(80);
					match(COMMAND);
					setState(81);
					match(NAME);
					setState(82);
					viewuse();
					setState(83);
					scope();
					setState(84);
					query();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(86);
					match(T__0);
					setState(87);
					query();
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(88);
					changegraph();
				}
				break;
				case 4:
					enterOuterAlt(_localctx, 4);
				{
					setState(89);
					viewuse();
					setState(90);
					scope();
					setState(91);
					query();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopeContext extends ParserRuleContext {
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitScope(this);
		}
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scope);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case T__1:
					enterOuterAlt(_localctx, 1);
				{
					setState(95);
					match(T__1);
				}
				break;
				case T__2:
					enterOuterAlt(_localctx, 2);
				{
					setState(96);
					match(T__2);
				}
				break;
				case KEYWORD:
					enterOuterAlt(_localctx, 3);
				{
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public TerminalNode KEYWORD() { return getToken(ViewParser.KEYWORD, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public ReturnstmtContext returnstmt() {
			return getRuleContext(ReturnstmtContext.class,0);
		}
		public PipelineContext pipeline() {
			return getRuleContext(PipelineContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_query);
		int _la;
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(100);
					match(KEYWORD);
					setState(101);
					expr();
					setState(102);
					conditions();
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__7) {
						{
							setState(103);
							pipeline();
						}
					}

					setState(106);
					returnstmt();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(108);
					match(KEYWORD);
					setState(109);
					path();
					setState(110);
					conditions();
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__7) {
						{
							setState(111);
							pipeline();
						}
					}

					setState(114);
					returnstmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChangegraphContext extends ParserRuleContext {
		public TerminalNode KEYWORD() { return getToken(ViewParser.KEYWORD, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public SetattrContext setattr() {
			return getRuleContext(SetattrContext.class,0);
		}
		public TerminalNode NAME() { return getToken(ViewParser.NAME, 0); }
		public AttributeContext attribute() {
			return getRuleContext(AttributeContext.class,0);
		}
		public InsertionContext insertion() {
			return getRuleContext(InsertionContext.class,0);
		}
		public ChangegraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_changegraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterChangegraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitChangegraph(this);
		}
	}

	public final ChangegraphContext changegraph() throws RecognitionException {
		ChangegraphContext _localctx = new ChangegraphContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_changegraph);
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(118);
					match(KEYWORD);
					setState(119);
					expr();
					setState(120);
					conditions();
					setState(121);
					match(T__3);
					setState(122);
					setattr();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(124);
					match(KEYWORD);
					setState(125);
					expr();
					setState(126);
					conditions();
					setState(127);
					match(T__4);
					setState(128);
					match(NAME);
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(130);
					match(KEYWORD);
					setState(131);
					expr();
					setState(132);
					conditions();
					setState(133);
					match(T__5);
					setState(134);
					attribute(0);
				}
				break;
				case 4:
					enterOuterAlt(_localctx, 4);
				{
					setState(136);
					match(KEYWORD);
					setState(137);
					expr();
					setState(138);
					conditions();
					setState(139);
					match(T__6);
					setState(140);
					insertion(0);
				}
				break;
				case 5:
					enterOuterAlt(_localctx, 5);
				{
					setState(142);
					match(T__6);
					setState(143);
					insertion(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PipelineContext extends ParserRuleContext {
		public ReplacementsContext replacements() {
			return getRuleContext(ReplacementsContext.class,0);
		}
		public PipeconditionsContext pipeconditions() {
			return getRuleContext(PipeconditionsContext.class,0);
		}
		public PipelineContext pipeline() {
			return getRuleContext(PipelineContext.class,0);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterPipeline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitPipeline(this);
		}
	}

	public final PipelineContext pipeline() throws RecognitionException {
		PipelineContext _localctx = new PipelineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pipeline);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(146);
					match(T__7);
					setState(147);
					replacements();
					setState(148);
					pipeconditions();
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(150);
					match(T__7);
					setState(151);
					replacements();
					setState(152);
					pipeconditions();
					setState(153);
					pipeline();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReplacementsContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(ViewParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(ViewParser.NAME, i);
		}
		public AsContext as() {
			return getRuleContext(AsContext.class,0);
		}
		public ReplacementsContext replacements() {
			return getRuleContext(ReplacementsContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public IterationContext iteration() {
			return getRuleContext(IterationContext.class,0);
		}
		public ReplacementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_replacements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterReplacements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitReplacements(this);
		}
	}

	public final ReplacementsContext replacements() throws RecognitionException {
		ReplacementsContext _localctx = new ReplacementsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_replacements);
		try {
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					enterOuterAlt(_localctx, 1);
				{
					setState(157);
					match(NAME);
					setState(158);
					as();
					setState(159);
					match(NAME);
					{
						setState(160);
						match(T__8);
						setState(161);
						replacements();
					}
				}
				break;
				case 2:
					enterOuterAlt(_localctx, 2);
				{
					setState(163);
					function();
					setState(164);
					as();
					setState(165);
					match(NAME);
					{
						setState(166);
						match(T__8);
						setState(167);
						replacements();
					}
				}
				break;
				case 3:
					enterOuterAlt(_localctx, 3);
				{
					setState(169);
					match(NAME);
					{
						setState(170);
						match(T__8);
						setState(171);
						replacements();
					}
				}
				break;
				case 4:
					enterOuterAlt(_localctx, 4);
				{
					setState(172);
					match(NAME);
					setState(173);
					as();
					setState(174);
					match(NAME);
				}
				break;
				case 5:
					enterOuterAlt(_localctx, 5);
				{
					setState(176);
					function();
					setState(177);
					as();
					setState(178);
					match(NAME);
				}
				break;
				case 6:
					enterOuterAlt(_localctx, 6);
				{
					setState(180);
					match(NAME);
				}
				break;
				case 7:
					enterOuterAlt(_localctx, 7);
				{
					setState(181);
					iteration();
					setState(182);
					as();
					setState(183);
					match(NAME);
					{
						setState(184);
						match(T__8);
						setState(185);
						replacements();
					}
				}
				break;
				case 8:
					enterOuterAlt(_localctx, 8);
				{
					setState(187);
					iteration();
					setState(188);
					as();
					setState(189);
					match(NAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IterationContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(ViewParser.NAME, 0); }
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public List<ValidValContext> validVal() {
			return getRuleContexts(ValidValContext.class);
		}
		public ValidValContext validVal(int i) {
			return getRuleContext(ValidValContext.class,i);
		}
		public IterationCaseContext iterationCase() {
			return getRuleContext(IterationCaseContext.class,0);
		}
		public IterationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iteration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterIteration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitIteration(this);
		}
	}

	public final IterationContext iteration() throws RecognitionException {
		IterationContext _localctx = new IterationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_iteration);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(193);
				match(T__9);
				setState(194);
				match(NAME);
				setState(195);
				match(T__10);
				setState(196);
				range();
				setState(197);
				match(T__11);
				setState(198);
				validVal(0);
				setState(199);
				match(T__8);
				setState(200);
				validVal(0);
				setState(201);
				match(T__12);
				setState(202);
				match(T__13);
				setState(203);
				iterationCase();
				setState(204);
				match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValidValContext extends ParserRuleContext {
		public SizeContext size() {
			return getRuleContext(SizeContext.class,0);
		}
		public TerminalNode NAME() { return getToken(ViewParser.NAME, 0); }
		public TerminalNode VALUE() { return getToken(ViewParser.VALUE, 0); }
		public IndexingContext indexing() {
			return getRuleContext(IndexingContext.class,0);
		}
		public List<ValidValContext> validVal() {
			return getRuleContexts(ValidValContext.class);
		}
		public ValidValContext validVal(int i) {
			return getRuleContext(ValidValContext.class,i);
		}
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public ValidValContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validVal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterValidVal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitValidVal(this);
		}
	}

	public final ValidValContext validVal() throws RecognitionException {
		return validVal(0);
	}

	private ValidValContext validVal(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ValidValContext _localctx = new ValidValContext(_ctx, _parentState);
		ValidValContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_validVal, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(215);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
					case T__20:
					case T__21:
					{
						setState(207);
						size();
						setState(208);
						match(T__11);
						setState(209);
						match(NAME);
						setState(210);
						match(T__12);
					}
					break;
					case VALUE:
					{
						setState(212);
						match(VALUE);
					}
					break;
					case T__15:
					{
						setState(213);
						match(T__15);
					}
					break;
					case NAME:
					{
						setState(214);
						indexing();
					}
					break;
					default:
						throw new NoViableAltException(this);
				}
				_ctx.stop = _input.LT(-1);
				setState(223);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						if ( _parseListeners!=null ) triggerExitRuleEvent();
						_prevctx = _localctx;
						{
							{
								_localctx = new ValidValContext(_parentctx, _parentState);
								pushNewRecursionContext(_localctx, _startState, RULE_validVal);
								setState(217);
								if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
								setState(218);
								arithmetic();
								setState(219);
								validVal(5);
							}
						}
					}
					setState(225);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class IterationCaseContext extends ParserRuleContext {
		public PipeexprContext pipeexpr() {
			return getRuleContext(PipeexprContext.class,0);
		}
		public List<ValidValContext> validVal() {
			return getRuleContexts(ValidValContext.class);
		}
		public ValidValContext validVal(int i) {
			return getRuleContext(ValidValContext.class,i);
		}
		public IterationCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iterationCase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterIterationCase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitIterationCase(this);
		}
	}

	public final IterationCaseContext iterationCase() throws RecognitionException {
		IterationCaseContext _localctx = new IterationCaseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_iterationCase);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(226);
				match(T__16);
				setState(227);
				pipeexpr();
				setState(228);
				match(T__17);
				setState(229);
				validVal(0);
				setState(230);
				match(T__18);
				setState(231);
				validVal(0);
				setState(232);
				match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SizeContext extends ParserRuleContext {
		public SizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_size; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterSize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitSize(this);
		}
	}

	public final SizeContext size() throws RecognitionException {
		SizeContext _localctx = new SizeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_size);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(234);
				_la = _input.LA(1);
				if ( !(_la==T__20 || _la==T__21) ) {
					_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RangeContext extends ParserRuleContext {
		public RangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).enterRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ViewListener ) ((ViewListener)listener).exitRange(this);
		}
	}

	public final RangeContext range() throws RecognitionException {
		RangeContext _localctx = new RangeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_range);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(236);
				_la = _input.LA(1);
				if ( !(_la==T__22 || _la==T__23) ) {
					_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
